# WNMAbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blacklist.txt  commands.txt
include/: acccheck.hpp  afkers.hpp  ayah.hpp  bible.hpp  channel.hpp  comebackmsg.hpp  commandshandler.hpp  commandsparser.hpp  connection.hpp  connectionhandler.hpp  connhandler.hpp  countries.hpp  credentials.hpp  databasehandle.hpp  encryption.hpp  hemirt.hpp  ignore.hpp  ircmessage.hpp  lotto.hpp  messagehandler.hpp  messenger.hpp  modules.hpp  mtrandom.hpp  network.hpp  parser.hpp  pingme.hpp  randomquote.hpp  redisauth.hpp  redisclient.hpp  remind.hpp  remindusers.hpp  setofusers.hpp  shared.hpp  tablesinitialize.hpp  time.hpp  trivia.hpp  usage.hpp  userage.hpp  userdata.hpp  userids.hpp  (+2 more)
include/disabled/: encryption.hpp
include/disabled/lotto/: lottoimpl.hpp
src/: acccheck.cpp  afkers.cpp  ayah.cpp  bible.cpp  channel.cpp  comebackmsg.cpp  commandshandler.cpp  commandsparser.cpp  connection.cpp  connectionhandler.cpp  connhandler.cpp  countries.cpp  encryption.cpp  hemirt.cpp  ignore.cpp  ircconnection.cpp  main.cpp  messenger.cpp  modules.cpp  mtrandom.cpp  parser.cpp  pingme.cpp  randomquote.cpp  redisauth.cpp  redisclient.cpp  remind.cpp  remindusers.cpp  setofusers.cpp  tablesinitialize.cpp  time.cpp  trivia.cpp  usage.cpp  userage.cpp  userdata.cpp  userids.cpp  users.cpp  utilities.cpp
src/disabled/: encryption.cpp  lotto.cpp
src/lotto/: lottoimpl.cpp
